<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginActivity"
    android:background="@drawable/splashback">
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:gravity="center"
            android:singleLine="true"
            android:textColorHint="@color/darkgray"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:imeOptions="actionUnspecified"
        android:maxLines="1"
        android:inputType="textPassword"
        android:gravity="center"
        android:singleLine="true"
        android:textColorHint="@color/darkgray"/>

    </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/LoginButton"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/yello"/>
        <TextView
            android:id="@+id/needAcc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/need_an_account"
            android:gravity="center"
            android:paddingTop="20dp"
            android:textStyle="bold"

            android:textSize="20sp" />

</LinearLayout>
    </ScrollView>
</LinearLayout>
