<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".signupActivity"
    android:background="@color/slide_3">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/signup_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="First Name"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColorHint="@color/darkgray"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColorHint="@color/darkgray"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/signup_UserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:imeOptions="actionUnspecified"
                        android:maxLines="1"
                        android:gravity="center"
                        android:singleLine="true"
                        android:textColorHint="@color/darkgray"/>

                </android.support.design.widget.TextInputLayout>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:inputType="number"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColorHint="@color/darkgray"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColorHint="@color/darkgray"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColorHint="@color/darkgray"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColorHint="@color/darkgray"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/signup_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:gravity="center"
                    android:singleLine="true"
                    android:textColorHint="@color/darkgray"/>

            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/signupButton"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@color/yello"/>
            <TextView
                android:id="@+id/redirectToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/redirecting_to_login"
                android:gravity="center"
                android:paddingTop="20dp"
                android:textStyle="bold"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
